[package]
name = "arb-reth-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Phase 1: bridge arb_revm's Arbitrum/ArbOS execution into reth's EVM + BlockExecutor
# extension points. Pinned to reth v2.0.0, which carries revm 36.0.0 — an exact match
# for arb_revm (no revm patching). See docs/arb-reth-roadmap.md.

[dependencies]
arb-revm = { path = "../arb-revm" }
revm = { workspace = true }

# Arbitrum primitives come from the user's idiomatic arb-alloy (op-alloy-parity): ArbTxEnvelope,
# ArbReceiptEnvelope (gas_used_for_l1), ArbHeaderInfo, the Arbitrum Network impl. Consumed as a
# path dep; alloy unifies upward (arb-alloy ^1.6.3 -> reth's 1.8.3). reth-trait impls will be
# added INSIDE arb-alloy behind a `reth` feature (orphan rule).
arb-alloy-consensus = { path = "../../../arb-alloy/crates/consensus", default-features = false, features = ["reth"] }

# reth v2.0.0 -> revm 36 (verified). Git-pinned to the release tag for cross-crate coherence.
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
